# bayesian_gas_simulation

gaden_bayesian_estimator/: CMakeLists.txt  package.xml
gaden_bayesian_estimator/scripts/: dijkstra.py  dijkstra_graph.py  display_trajectories.py  gaden_bayesian_estimator.py  gaden_bayesian_estimator_interval_5_min.py  kde_gaden_bayesian_estimator (copy).py  kde_gaden_bayesian_estimator.py  kde_gaden_bayesian_estimator_pose_only.py  main.py  simple_exploration_gas.py
gaden_environment/src/: environment.cpp
gaden_filament_simulator/include/filament_simulator/: filament_simulator.h
gaden_filament_simulator/src/: filament_simulator.cpp
gaden_player/src/: simulation_player.cpp  simulation_player.h
gaden_preprocessing/include/preprocessing/: preprocessing.h
gaden_preprocessing/src/: preprocessing.cpp
gaden_preprocessing_voronoi/: CMakeLists.txt  package.xml
gaden_preprocessing_voronoi/include/preprocessing_voronoi/: preprocessing_voronoi.h
gaden_preprocessing_voronoi/src/: preprocessing_save_distance.cpp  preprocessing_voronoi.cpp
simulated_gas_sensor/src/: fake_gas_sensor.cpp
test_env/ITB_v1_0/cad_models/: itb_osm_v2_inlet_outlet.dae  itb_osm_v2_inlet_outlet.stl  itb_osm_v2_wall.dae  itb_osm_v2_wall.stl
test_env/ITB_v1_0/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  GADEN_preprocessing_save_distance.launch  GADEN_preprocessing_voronoi.launch  main_simbot.launch
test_env/ITB_v1_0/launch/ros/: gaden.rviz
test_env/ITB_v1_0/wind_simulations/W1/: wind_at_cell_centers_0.csv_U  wind_at_cell_centers_0.csv_V  wind_at_cell_centers_0.csv_W
